...
                shape          = RoundedCornerShape(12.dp),
                colors         = ButtonDefaults.buttonColors(containerColor = ConcordiaMaroon),
                elevation      = ButtonDefaults.buttonElevation(4.dp),
                contentPadding = PaddingValues(0.dp)
            ) {
                Text(
                    text  = "EXIT",
                    style = MaterialTheme.typography.labelLarge.copy(
                        fontWeight = FontWeight.Bold,
                        fontSize   = 12.sp
                    )
                )
            }
...
