...
    <TextView
        android:id="@+id/lblCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="Directions"
        android:textColor="#004bd0"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@id/btnCar"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@id/btnCar"
        app:layout_constraintTop_toBottomOf="@id/btnCar" />
...
    <TextView
        android:id="@+id/lblSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="Save"
        android:textColor="#004bd0"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@id/btnSave"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@id/btnSave"
        app:layout_constraintTop_toBottomOf="@id/btnSave" />
...
    <TextView
        android:id="@+id/lblPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="PIN"
        android:textColor="#004bd0"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@id/btnPin"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@id/btnPin"
        app:layout_constraintTop_toBottomOf="@id/btnPin" />
...
    <TextView
        android:id="@+id/lblShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="Share"
        android:textColor="#004bd0"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@id/btnShare"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="@id/btnShare"
        app:layout_constraintTop_toBottomOf="@id/btnShare" />
...
