...
    selectedCampusName: String?,
    onCampusClick: (String) -> Unit,
    modifier: Modifier = Modifier
) {
    Column(modifier = modifier.width(60.dp).testTag("campus_toggle")) {
        CampusButton(
            label      = "SGW",
            isSelected = selectedCampusName?.equals("SGW", ignoreCase = true) == true,
            isTop      = true,
            onClick    = { onCampusClick("SGW") },
            modifier   = Modifier.testTag("SGW_button")
        )
        CampusButton(
            label      = "LOY",
            isSelected = selectedCampusName?.equals("LOYOLA", ignoreCase = true) == true,
            isTop      = false,
            onClick    = { onCampusClick("LOYOLA") },
            modifier   = Modifier.testTag("LOY_button")
        )
    }
...
